# learn-cuda

./: README.md  main.sh  main.tf  manage.sh
cloud/aws/: main.tf
python/: .gitignore  playbook.yaml  pyproject.toml
