[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
authors = ["Macklan Weinstein <wolfgang.wazzle.strauss@gmail.com>"]
description = ""
name = "learn-cuda"
version = "0.0.1"

[tool.poetry.dependencies]
cupy = "^8.3.0"
python = "^3.8.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
